--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "remark-html": "^16.0.1",
     "sass": "^1.72.0",
     "sticky-js": "^1.3.0",
+    "sticky-ts": "^0.1.1",
     "swiper": "^9.0.0",
     "yet-another-react-lightbox": "^3.17.2"
   },
