--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "sticky-js": "^1.3.0",
     "sticky-ts": "^0.1.1",
     "swiper": "^9.0.0",
-    "yet-another-react-lightbox": "^3.17.2"
+    "yet-another-react-lightbox": "^3.17.2",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
