--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sticky-js": "^1.3.0",
     "sticky-ts": "^0.1.1",
     "swiper": "^9.0.0",
+    "uuid": "^11.0.2",
     "yet-another-react-lightbox": "^3.17.2",
     "zustand": "^5.0.0-rc.2"
   },
