--- a/.github/workflows/cleanup-payments.yml
+++ b/.github/workflows/cleanup-payments.yml
@@ -2,8 +2,8 @@ name: Cleanup Abandoned Payments
 
 on:
   schedule:
-    - cron: '*/15 * * * *'  # Runs every 15 minutes
-  workflow_dispatch:  # Allows manual triggering
+    - cron: '0 3 * * *'       # Every day at 3 AM
+  workflow_dispatch:          # Allows manual triggering
 
 jobs:
   cleanup:
