--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "db:types": "npx supabase gen types typescript --project-id wgmhnqbxelhhqdkaijlc > types/database.types.ts"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.28",
+    "@react-email/render": "^1.0.2",
+    "@react-email/tailwind": "^1.0.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
@@ -23,9 +26,11 @@
     "prettier": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "^3.0.2",
     "react-modal-video": "^2.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "resend": "^4.0.1-alpha.0",
     "sass": "^1.72.0",
     "sticky-js": "^1.3.0",
     "sticky-ts": "^0.1.1",
