send invoice if applicable

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "geist": "^1.2.1",
     "gray-matter": "^4.0.3",
     "isotope-layout": "^3.0.6",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.436.0",
     "mapbox-gl": "^3.2.0",
     "next": "latest",
