--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@types/node": "20.10.6",
+    "@types/node": "^20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "@types/react-modal-video": "^1.2.3",
