refactor checkout and restaurant context

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "geist": "^1.2.1",
     "gray-matter": "^4.0.3",
@@ -24,7 +26,6 @@
     "lucide-react": "^0.436.0",
     "mapbox-gl": "^3.2.0",
     "next": "latest",
-    "node-fetch": "^3.3.2",
     "prettier": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
