--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "db:types": "npx supabase gen types typescript --project-id wgmhnqbxelhhqdkaijlc > types/database.types.ts"
+    "db:types": "npx supabase gen types typescript --project-id wgmhnqbxelhhqdkaijlc > types/database.types.ts",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@react-email/components": "^0.0.28",
@@ -44,10 +45,12 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.0",
     "@types/node": "^20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "@types/react-modal-video": "^1.2.3",
+    "playwright": "^1.49.0",
     "postcss": "8.4.33",
     "typescript": "5.3.3"
   }
