--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-email": "^3.0.2",
+    "react-icons": "^5.4.0",
     "react-modal-video": "^2.0.1",
     "react-toastify": "^10.0.6",
     "remark": "^15.0.1",
