--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@react-email/components": "^0.0.28",
     "@react-email/render": "^1.0.2",
     "@react-email/tailwind": "^1.0.2",
@@ -20,6 +21,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "formik": "^2.4.5",
+    "framer-motion": "^11.16.1",
     "geist": "^1.2.1",
     "gray-matter": "^4.0.3",
     "isotope-layout": "^3.0.6",
@@ -31,6 +33,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-email": "^3.0.2",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-modal-video": "^2.0.1",
     "react-toastify": "^10.0.6",
@@ -43,6 +47,7 @@
     "swiper": "^9.0.0",
     "uuid": "^11.0.2",
     "yet-another-react-lightbox": "^3.17.2",
+    "zod": "^3.24.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
