--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "db:types": "npx supabase gen types typescript --project-id wgmhnqbxelhhqdkaijlc > types/database.types.ts",
     "test:e2e": "playwright test"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@prisma/client": "^6.2.1",
     "@react-email/components": "^0.0.28",
     "@react-email/render": "^1.0.2",
     "@react-email/tailwind": "^1.0.2",
@@ -30,6 +31,7 @@
     "mapbox-gl": "^3.2.0",
     "next": "latest",
     "prettier": "^3.3.3",
+    "prisma": "^6.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-email": "^3.0.2",
@@ -52,7 +54,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.49.0",
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.17.12",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "@types/react-modal-video": "^1.2.3",
